--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-server.port=9090
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=SA
-spring.datasource.password=PASSWORD
-
-
+server.port=9090
