--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,12 +6,13 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=shareit
 spring.datasource.password=shareit
 #---
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.url=jdbc:h2:mem:shareit;MODE=PostgreSQL
 spring.datasource.username=shareit
 spring.datasource.password=shareit
